--- a/week1/notes.html
+++ b/week1/notes.html
@@ -1,19 +1,39 @@
 <!DOCTYPE html>
-<meta>
-<title>WDD330 WIP</title></meta>
+
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WDD 330 Portal</title>
+    <meta name="description" content="assignment portal for WDD 230 Spring 2020" />
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&family=Patrick+Hand&display=swap"
+        rel="stylesheet"> -->
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 <html>
-    <header>
-        <h1>Home</h1>
-    </header>
+<header>
+    <h1>Home</h1>
+</header>
+
 <body>
     <ul>
-        <li><a href="week1/notes.html">Week 1</a></li>
+        <li><a href="week1/notes.html">Notes</a></li>
+        <li><a href="week1/Code.html">Code</a></li>
     </ul>
+    <h3>
+        Readings notes- Mobil first design strategies.</h3>
+    <p>
+        Screen usage
+        Reachability -
+        Simple
+        Speed and Bandwidth
+        Forms – set up for Mobil
+        Phone – click to call
+        Advertising – small and simple no pop-up adds
+    </p>
 </body>
 <footer>
-    <a href="/index.html">Week 1</a>
+    <a href="/index.html">Home</a>
 </footer>
+
 </html>
