--- a/week1/notes.html
+++ b/week1/notes.html
@@ -7,19 +7,15 @@
     <meta name="description" content="assignment portal for WDD 230 Spring 2020" />
     <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&family=Patrick+Hand&display=swap"
         rel="stylesheet"> -->
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/styles.css" />
 </head>
 <html>
 <header>
-    <h1>Home</h1>
+    <h1>Week 1 Notes</h1>
 </header>
 
 <body>
-    <ul>
-        <li><a href="week1/notes.html">Notes</a></li>
-        <li><a href="week1/Code.html">Code</a></li>
-    </ul>
     <h3>
         Readings notes- Mobil first design strategies.</h3>
     <p>
@@ -31,6 +27,10 @@
         Phone – click to call
         Advertising – small and simple no pop-up adds
     </p>
+    <ul>
+        <li><a href="code.html">Code Sample 1</a></li>
+        <li><a href="code2.html">Code Sample 2</a></li>
+    </ul>
 </body>
 <footer>
     <a href="/index.html">Home</a>
