--- a/week1/notes.html
+++ b/week1/notes.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 330 Portal</title>
+    <meta name="author" content="Tiffany Quinlan" />
     <meta name="description" content="assignment portal for WDD 230 Spring 2020" />
     <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&family=Patrick+Hand&display=swap"
         rel="stylesheet"> -->
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 <html>
 <header>
@@ -33,7 +34,7 @@
     </ul>
 </body>
 <footer>
-    <a href="/index.html">Home</a>
+    <a href="index.html">Home</a>
 </footer>
 
 </html>
