--- a/week1/code.html
+++ b/week1/code.html
@@ -17,6 +17,6 @@
     </header>
 
     <footer>
-        <a href="index.html">Home</a>
+        <a href="/index.html">Home</a>
     </footer>
-</html>>
+</html>
