--- a/week1/code2.html
+++ b/week1/code2.html
@@ -13,16 +13,10 @@
 </head>
 <html>
     <header>
-        <h1>Home</h1>
+        <h1>Code Samples Continued</h1>
     </header>
-<body>
-    <ul>
-        <li><a href="week1/notes.html">Week 1</a></li>
-        <li><a href="week2/notes.html">Week 2</a></li>
-        <li><a href="week3/notes.html">Week 3</a></li>
-    </ul>
-</body>
-<footer>
 
-</footer>
+    <footer>
+        <a href="/index.html">Home</a>
+    </footer>
 </html>
