--- a/week1/code.html
+++ b/week1/code.html
@@ -17,6 +17,6 @@
     </header>
 
     <footer>
-        <a href="/index.html">Home</a>
+        <a href="/week1/notes.html">Week 1</a>
     </footer>
 </html>
