--- a/week1/notes.html
+++ b/week1/notes.html
@@ -34,7 +34,7 @@
     </ul>
 </body>
 <footer>
-    <a href="/index.html">Home</a>
+    <a href="portfolio/index.html">Home</a>
 </footer>
 
 </html>
