--- a/week1/code.html
+++ b/week1/code.html
@@ -12,11 +12,17 @@
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 <html>
-    <header>
-        <h1>Code Samples</h1>
-    </header>
+<header>
+    <h1>Code Samples</h1>
+</header>
 
-    <footer>
-        <a href="/week1/notes.html">Week 1</a>
-    </footer>
+<body>
+    Ramdom Code Examples from projects I will be working on. This is where I will display some of the things I am
+    learning and show parts of code that is new to me.
+</body>
+
+<footer>
+    <a href="week1/notes.html">Week 1</a>
+</footer>
+
 </html>
