--- a/week1/code2.html
+++ b/week1/code2.html
@@ -17,6 +17,6 @@
     </header>
 
     <footer>
-        <a href="week1/notes.html">Week 1</a>
+        <a href="/week1/notes.html">Week 1</a>
     </footer>
 </html>
