--- a/week1/code.html
+++ b/week1/code.html
@@ -22,7 +22,7 @@
 </body>
 
 <footer>
-    <a href="/week1/notes.html">Week 1</a>
+    <a href="/portfolio/week1/notes.html">Week 1</a>
 </footer>
 
 </html>
