--- a/week1/notes.html
+++ b/week1/notes.html
@@ -20,13 +20,13 @@
     <h3>
         Readings notes- Mobil first design strategies.</h3>
     <p>
-        Screen usage</n>
-        Reachability -
-        Simple
-    </n>Speed and Bandwidth
-    </n>Forms – set up for Mobil
-    </n>Phone – click to call
-    </n>Advertising – small and simple no pop-up adds
+        <h4>Screen usage</h4>
+        <br>    Reachability -
+        <br>    Simple
+        <br>    Speed and Bandwidth
+        <br>    Forms – set up for Mobil
+        <br>    Phone – click to call
+        <br>    Advertising – small and simple no pop-up adds
     </p>
     <ul>
         <li><a href="code.html">Code Sample 1</a></li>
