--- a/week1/notes.html
+++ b/week1/notes.html
@@ -12,29 +12,32 @@
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 <html>
-<header>
-    <h1>Week 1 Notes</h1>
-</header>
 
 <body>
-    <h3>
-        Readings notes- Mobil first design strategies.</h3>
-    <p>
+    <header>
+        <h1>Week 1 Notes</h1>
+    </header>
+    <main>
+        <h3>
+            Readings notes- Mobil first design strategies.</h3>
+        <p>
         <h4>Screen usage</h4>
-        <br>    Reachability -
-        <br>    Simple
-        <br>    Speed and Bandwidth
-        <br>    Forms – set up for Mobil
-        <br>    Phone – click to call
-        <br>    Advertising – small and simple no pop-up adds
-    </p>
-    <ul>
-        <li><a href="code.html">Code Sample 1</a></li>
-        <li><a href="code2.html">Code Sample 2</a></li>
-    </ul>
+        <br> Reachability -
+        <br> Simple
+        <br> Speed and Bandwidth
+        <br> Forms – set up for Mobil
+        <br> Phone – click to call
+        <br> Advertising – small and simple no pop-up adds
+        </p>
+        <ul>
+            <li><a href="code.html">Code Sample 1</a></li>
+            <li><a href="code2.html">Code Sample 2</a></li>
+        </ul>
+    </main>
+    <footer>
+        <a href="/portfolio">Home</a>
+    </footer>
 </body>
-<footer>
-    <a href="/portfolio">Home</a>
-</footer>
+
 
 </html>
