--- a/week1/code.html
+++ b/week1/code.html
@@ -12,17 +12,19 @@
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 <html>
-<header>
-    <h1>Code Samples</h1>
-</header>
 
 <body>
-    Ramdom Code Examples from projects I will be working on. This is where I will display some of the things I am
-    learning and show parts of code that is new to me.
-</body>
+    <header>
+        <h1>Code Samples</h1>
+    </header>
+    <main>
+        Ramdom Code Examples from projects I will be working on. This is where I will display some of the things I am
+        learning and show parts of code that is new to me.
+    </main>
 
-<footer>
-    <a href="/portfolio/week1/notes.html">Week 1</a>
-</footer>
+    <footer>
+        <a href="/portfolio/week1/notes.html">Week 1</a>
+    </footer>
+</body>
 
 </html>
