--- a/week1/code2.html
+++ b/week1/code2.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/portfolio/css/styles.css" />
 </head>
 <html>
+    <body>
     <header>
         <h1>Code Samples Continued</h1>
     </header>
@@ -19,4 +20,5 @@
     <footer>
         <a href="/portfolio/week1/notes.html">Week 1</a>
     </footer>
+</body>
 </html>
