--- a/index.html
+++ b/index.html
@@ -12,17 +12,22 @@
     <link rel="stylesheet" href="/portfolio/css/styles.css" />
 </head>
 <html>
+
+<body>
     <header>
         <h1>Home</h1>
     </header>
-<body>
-    <ul>
-        <li><a href="week1/notes.html">Week 1</a></li>
-        <li><a href="week2/notes.html">Week 2</a></li>
-        <li><a href="week3/notes.html">Week 3</a></li>
-    </ul>
-</body>
-<footer>
+    <main>
+        <ul>
+            <li><a href="week1/notes.html">Week 1</a></li>
+            <li><a href="week2/notes.html">Week 2</a></li>
+            <li><a href="week3/notes.html">Week 3</a></li>
+        </ul>
+    </main>
 
-</footer>
+    <footer>
+        <h3>Created by Tiffany H</h3> | <h3>Copyright 2020</h3>
+    </footer>
+</body>
+
 </html>
