--- a/week1/code.html
+++ b/week1/code.html
@@ -8,8 +8,8 @@
     <meta name="description" content="assignment portal for WDD 230 Spring 2020" />
     <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&family=Patrick+Hand&display=swap"
         rel="stylesheet"> -->
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="CSS/normalize.css">
+    <link rel="stylesheet" href="/CSS/styles.css" />
 </head>
 <html>
 
@@ -23,7 +23,7 @@
     </main>
 
     <footer>
-        <a href="/portfolio/week1/notes.html">Week 1</a>
+        <a href="/portfolio/week1/notes.html">Week 1</a> <p>Created by Tiffany H | Copyright 2020</p>
     </footer>
 </body>
 
