--- a/week1/code2.html
+++ b/week1/code2.html
@@ -8,8 +8,8 @@
     <meta name="description" content="assignment portal for WDD 230 Spring 2020" />
     <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&family=Patrick+Hand&display=swap"
         rel="stylesheet"> -->
-    <link rel="stylesheet" href="/portfolio/css/normalize.css">
-    <link rel="stylesheet" href="/portfolio/css/styles.css" />
+    <link rel="stylesheet" href="/portfolio/CSS/normalize.css">
+    <link rel="stylesheet" href="/portfolio/CSS/styles.css" />
 </head>
 <html>
     <body>
@@ -18,7 +18,7 @@
     </header>
 
     <footer>
-        <a href="/portfolio/week1/notes.html">Week 1</a>
+        <a href="/portfolio/week1/notes.html">Week 1</a> <p>Created by Tiffany H | Copyright 2020</p>
     </footer>
 </body>
 </html>
