--- a/week1/notes.html
+++ b/week1/notes.html
@@ -8,8 +8,8 @@
     <meta name="description" content="assignment portal for WDD 230 Spring 2020" />
     <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&family=Patrick+Hand&display=swap"
         rel="stylesheet"> -->
-    <link rel="stylesheet" href="/portfolio/css/normalize.css">
-    <link rel="stylesheet" href="/portfolio/css/styles.css">
+    <link rel="stylesheet" href="/portfolio/CSS/normalize.css">
+    <link rel="stylesheet" href="/portfolio/CSS/styles.css">
 </head>
 <html>
 
@@ -35,7 +35,7 @@
         </ul>
     </main>
     <footer>
-        <a href="/portfolio">Home</a>
+        <a href="/portfolio">Home</a> <p>Created by Tiffany H | Copyright 2020</p>
     </footer>
 </body>
 
