--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="assignment portal for WDD 230 Spring 2020" />
     <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&family=Patrick+Hand&display=swap"
         rel="stylesheet"> -->
-    <link rel="stylesheet" href="/portfolio/CSS/normalize.css">
-    <link rel="stylesheet" href="/portfolio/CSS/styles.css" />
+    <link rel="stylesheet" href="CSS/normalize.css">
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <html>
 
@@ -26,7 +26,7 @@
     </main>
 
     <footer>
-        <h3>Created by Tiffany H</h3> | <h3>Copyright 2020</h3>
+        <p>Created by Tiffany H | Copyright 2020</p>
     </footer>
 </body>
 
