--- a/week1/notes.html
+++ b/week1/notes.html
@@ -22,8 +22,10 @@
             Readings notes- Mobil first design strategies.</h3>
         <p>
         <h4>Screen usage</h4>
-        <br> Reachability -
-        <br> Simple
+        <ul>
+            <li>Reachability</li>
+            <li>Simple</li>
+        </ul>
         <br> Speed and Bandwidth
         <br> Forms – set up for Mobil
         <br> Phone – click to call
@@ -35,7 +37,7 @@
         </ul>
     </main>
     <footer>
-        <a href="/portfolio">Home</a> <p>Created by Tiffany H | Copyright 2020</p>
+        <p><a href="/portfolio">Home</a> Created by Tiffany H | Copyright 2020</p>
     </footer>
 </body>
 
