--- a/week1/code2.html
+++ b/week1/code2.html
@@ -9,7 +9,7 @@
     <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&family=Patrick+Hand&display=swap"
         rel="stylesheet"> -->
     <link rel="stylesheet" href="/portfolio/CSS/normalize.css">
-    <link rel="stylesheet" href="/portfolio/CSS/styles.css" />
+    <link rel="stylesheet" href="/portfolio/CSS/styles.css">
 </head>
 <html>
     <body>
@@ -18,7 +18,7 @@
     </header>
 
     <footer>
-        <a href="/portfolio/week1/notes.html">Week 1</a> <p>Created by Tiffany H | Copyright 2020</p>
+        <p> <a href="/portfolio/week1/notes.html">Week 1</a> Created by Tiffany H | Copyright 2020</p>
     </footer>
 </body>
 </html>
