--- a/week2/code2.html
+++ b/week2/code2.html
@@ -12,18 +12,13 @@
     <link rel="stylesheet" href="/portfolio/CSS/styles.css">
 </head>
 <html>
-
-<body>
+    <body>
     <header>
-        <h1>Code Samples</h1>
+        <h1>Code Samples Continued</h1>
     </header>
-    <main>
-        This is where I will display some of the code samples from reading assignments.
-    </main>
 
     <footer>
-        <p><a href="/portfolio">Home</a> | Tiffany Hofhiens | Copyright 2020</p>
+        <p> <a href="/portfolio/week1/notes.html">Week 1</a> Created by Tiffany H | Copyright 2020</p>
     </footer>
 </body>
-
 </html>
