--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
             <li><a href="week1/notes.html">Week 1</a></li>
             <li><a href="week2/notes.html">Week 2</a></li>
             <li><a href="week3/notes.html">Week 3</a></li>
+            <li><a href="week4/notes.html">Week 3</a></li>
+            <li><a href="week5/notes.html">Week 3</a></li>
         </ul>
     </main>
 
     <footer>
-        <p>Created by Tiffany H | Copyright 2020</p>
+        <p>Tiffany Hofhiens | Copyright 2020</p>
     </footer>
 </body>
 
