updates to links

--- a/week1/notes.html
+++ b/week1/notes.html
@@ -37,7 +37,7 @@
         </ul>
     </main>
     <footer>
-        <p><a href="/portfolio">Home</a> | Tiffany Hofhiens | Copyright 2020</p>
+        <p><a href="/index.html">Portfolio Home</a> | Tiffany Hofhiens | Copyright 2020</p>
     </footer>
 </body>
 
