--- a/week2/code2.html
+++ b/week2/code2.html
@@ -18,7 +18,7 @@
     </header>
 
     <footer>
-        <p> <a href="/portfolio/week1/notes.html">Week 1</a> Created by Tiffany H | Copyright 2020</p>
+        <p> <a href="/week2/notes.html">Week 2</a> Created by Tiffany H | Copyright 2020</p>
     </footer>
 </body>
 </html>
