--- a/week2/notes.html
+++ b/week2/notes.html
@@ -8,36 +8,36 @@
     <meta name="description" content="assignment portal for WDD 230 Spring 2020" />
     <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&family=Patrick+Hand&display=swap"
         rel="stylesheet"> -->
-    <link rel="stylesheet" href="/portfolio/CSS/normalize.css">
-    <link rel="stylesheet" href="/portfolio/CSS/styles.css">
+    <link rel="stylesheet" href="/CSS/normalize.css">
+    <link rel="stylesheet" href="/CSS/styles.css">
 </head>
 <html>
 
 <body>
     <header>
-        <h1>Week 1 Notes</h1>
+        <h1>Week 2</h1>
     </header>
     <main>
-        <h3>
-            Readings notes- Mobil first design strategies.</h3>
-        <p>
-        <h4>Screen usage</h4>
+        <h3>Readings notes</h3>
+
+        <h4>Chapters 2-4</h4>
         <ul>
-            <li>Reachability</li>
-            <li>Simple</li>
+            <li>Ch2: Programming basics</li>
+            variables, scope, converting/parsing, and template literals `string`
+            <li>Ch3: Arrays, Logic, and Loops </li>
+            array methods
+            <li>Ch4: Functions</li>
+            function in Javascript
+            callbacks
         </ul>
-        <br> Speed and Bandwidth
-        <br> Forms – set up for Mobil
-        <br> Phone – click to call
-        <br> Advertising – small and simple no pop-up adds
-        </p>
-        <ul>
-            <li><a href="code.html">Code Sample 1</a></li>
-            <!-- <li><a href="code2.html">Code Sample 2</a></li> -->
-        </ul>
+
+
+        <a href="code.html">Code Sample</a>
+        <!-- <li><a href="code2.html">Code Sample 2</a></li> -->
+
     </main>
     <footer>
-        <p><a href="/portfolio">Home</a> | Tiffany Hofhiens | Copyright 2020</p>
+        <p><a href="/index.html">Portfolio Home</a> | Tiffany Hofhiens | Copyright 2020</p>
     </footer>
 </body>
 
