--- a/index.html
+++ b/index.html
@@ -25,11 +25,18 @@
             <li><a href="week4/notes.html">Week 4</a></li>
             <li><a href="week5/notes.html">Week 5</a></li>
         </ul>
+
+        <!-- <p id="demo">A Paragraph.</p>
+
+<button type="button" onclick="myFunction()">Try it</button> -->
+
     </main>
 
     <footer>
         <p>Tiffany Hofhiens | Copyright 2020</p>
     </footer>
+
+    <script src="js/main.js"></script>
 </body>
 
 </html>
