--- a/week1/code.html
+++ b/week1/code.html
@@ -22,7 +22,7 @@
     </main>
 
     <footer>
-        <p><a href="/portfolio">Home</a> | Tiffany Hofhiens | Copyright 2020</p>
+        <p><a href="/index.html">Home</a> | Tiffany Hofhiens | Copyright 2020</p>
     </footer>
 </body>
 
