--- a/week2/code.html
+++ b/week2/code.html
@@ -22,7 +22,7 @@
     </main>
 
     <footer>
-        <p><a href="/portfolio">Home</a> | Tiffany Hofhiens | Copyright 2020</p>
+        <p> <a href="/week2/notes.html">Week 2</a> Created by Tiffany H | Copyright 2020</p>
     </footer>
 </body>
 
