--- a/week2/code.html
+++ b/week2/code.html
@@ -18,12 +18,13 @@
         <h1>Code Samples</h1>
     </header>
     <main>
-        This is where I will display some of the code samples from reading assignments.
+        
     </main>
 
     <footer>
         <p> <a href="/week2/notes.html">Week 2</a> Created by Tiffany H | Copyright 2020</p>
     </footer>
-</body>
 
+</body>
+<script src='main.js'></script>
 </html>
