--- a/week2/notes.html
+++ b/week2/notes.html
@@ -30,6 +30,8 @@
             function in Javascript
             callbacks
         </ul>
+        <P>This week I got to explore Javascript. I appreciated the time to try out new code see how html and js can
+            make the website more interactive.</P>
 
 
         <a href="code.html">Code Sample</a>
