Week 2 code update

--- a/week2/code.html
+++ b/week2/code.html
@@ -47,6 +47,9 @@
             <br> // At the end of the game, report the player's score
             <br> alert(`Game Over, you scored ${score} point${score > 1 ? 's' : ''}`);
 
+            <br>
+            <p> <a href="/week2/code2.txt">Code with functions</a></p>
+
     </main>
 
     <footer>
