--- a/week2/notes.html
+++ b/week2/notes.html
@@ -36,6 +36,9 @@
         <a href="code.html">Code Sample</a>
         <!-- <li><a href="code2.html">Code Sample 2</a></li> -->
 
+            <h3>Resources:</h3>
+            <p><a href="https://eloquentjavascript.net/01_values.html">eloquentjavascript</a></p>
+            
     </main>
     <footer>
         <p><a href="/index.html">Portfolio Home</a> | Tiffany Hofhiens | Copyright 2020</p>
