--- a/week2/code.html
+++ b/week2/code.html
@@ -49,7 +49,8 @@
 
 
             <br>
-            <button id='button'>Play Game</button>
+            <button id='game'>Play Game</button>
+            <button id='background'>Change Background</button>
             <p> <a href="/week2/code2.txt">Code with functions</a></p>
 
 
