--- a/week2/notes.html
+++ b/week2/notes.html
@@ -8,8 +8,8 @@
     <meta name="description" content="assignment portal for WDD 230 Spring 2020" />
     <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&family=Patrick+Hand&display=swap"
         rel="stylesheet"> -->
-    <link rel="stylesheet" href="/CSS/normalize.css">
-    <link rel="stylesheet" href="/CSS/styles.css">
+    <link rel="stylesheet" href="/portfolio/CSS/normalize.css">
+    <link rel="stylesheet" href="/portfolio/CSS/styles.css">
 </head>
 <html>
 
@@ -32,16 +32,18 @@
         </ul>
         <P>This week I got to explore Javascript. I appreciated the time to try out new code see how html and js can
             make the website more interactive.</P>
+        <p>My team had our first meeting and went thourgh the gorup assignment. We explored js together by making a
+            simple calculator.</p>
 
         <a href="code.html">Code Sample</a>
         <!-- <li><a href="code2.html">Code Sample 2</a></li> -->
 
-            <h3>Resources:</h3>
-            <p><a href="https://eloquentjavascript.net/01_values.html">eloquentjavascript</a></p>
-            
+        <h3>Resources:</h3>
+        <p><a href="https://eloquentjavascript.net/01_values.html">eloquentjavascript</a></p>
+
     </main>
     <footer>
-        <p><a href="/index.html">Portfolio Home</a> | Tiffany Hofhiens | Copyright 2020</p>
+        <p><a href="/portfolio/index.html">Portfolio Home</a> | Tiffany Hofhiens | Copyright 2020</p>
     </footer>
 </body>
 
