--- a/week3/code.html
+++ b/week3/code.html
@@ -18,7 +18,32 @@
         <h1>Code Samples</h1>
     </header>
     <main>
-        This is where I will display some of the code samples from reading assignments.
+        <h4>Example of Arrow function</h4>
+        <div>
+            <br> let user = {
+            <br> firstName: "Ilya",
+            <br>sayHi() {
+            <br> let arrow = () => alert(this.firstName);
+            <br> arrow();
+            <br>}
+            <br>};
+            <br> user.sayHi(); // Ilya
+        </div>
+        <h4>Example of JSON</h4>
+        <br>JSON.parse(batman);
+        <br><< { name: 'Batman',
+        <br>'real name': 'Bruce Wayne',
+        <br>height: 74,
+        <br>weight: 210,
+        <br>hero: true,
+        <br>villain: false,
+        <br>allies: [ 'Robin', 'Batgirl', 'Superman' ] }
+        <br>
+        <br>JSON.stringify(wonderWoman);
+        <br><< '{"name":"Wonder Woman","real name":"Diana Prince","height":72,
+        <br>"weight":165,"hero":true,"villain":false,"allies":["Wonder Girl",
+        <br>"Donna Troy","Superman"]}'
+
     </main>
 
     <footer>
