--- a/week3/notes.html
+++ b/week3/notes.html
@@ -15,24 +15,51 @@
 
 <body>
     <header>
-        <h1>Week 1 Notes</h1>
+        <h1>Week 4</h1>
     </header>
     <main>
-        <h3>
-            Readings notes- Mobil first design strategies.</h3>
+        <h3>Readings notes</h3>
         <p>
-        <h4>Screen usage</h4>
-        <ul>
-            <li>Reachability</li>
-            <li>Simple</li>
-        </ul>
-        <br> Speed and Bandwidth
-        <br> Forms – set up for Mobil
-        <br> Phone – click to call
-        <br> Advertising – small and simple no pop-up adds
+            <h4><a href="https://javascript.info/object-methods">Object Methods: this</a></h4>
+            <br> access an object using "this" keyword
+            <br>example this.name // "this" is the "curent object"
+            <br>This allows the same function to utalize different objects and determin the value during runtime.
+            <br>Note: arrow functions don't have their own "this" //Example in code
+            <h4>Calculator Practice</h4>
+            <a href="https://javascript.info/task/calculator">calculator 3 methods</a>
+            <ul>
+                <li>Reachability</li>
+                <li>Simple</li>
+            </ul>
+            <br> Advertising – small and simple no pop-up adds
         </p>
+        <h4>Chapter 5</h4>
+        <p>Objects
+            <br>create objects as variables with properties
+            <br>const spiderman = {}; // object literal (prefered)
+            <br>const spiderman = new Object(); //object function
+            <br>Nested objects
+            <br>object that contains a list of other objects
+            <br> Note: objects are passed by reference
+            <br> ---- JSON Objects ----
+            <br> JSON.parse() and JSON.stringify() //example in code
+            <br> ---- Math ----
+            <br> ---- Regular expressions ----
+        </p>
+        <h4>Chapter 6</h4>
+        <p>Document Object Model
+
+
+        </p>
+        <h4>Chapter 7</h4>
+        <p>Events
+
+
+        </p>
+
+
         <ul>
-            <li><a href="code.html">Code Sample 1</a></li>
+            <li><a href="code.html">"this" exercizes</a></li>
             <!-- <li><a href="code2.html">Code Sample 2</a></li> -->
         </ul>
     </main>
