--- a/week3/code.html
+++ b/week3/code.html
@@ -47,7 +47,7 @@
     </main>
 
     <footer>
-        <p><a href="/portfolio">Home</a> | Tiffany Hofhiens | Copyright 2020</p>
+        <p><a href="/portfolio/week3/notes.html">Week 3</a> | Tiffany Hofhiens | Copyright 2020</p>
     </footer>
 </body>
 
