team mtg notes/code

--- a/week3/notes.html
+++ b/week3/notes.html
@@ -92,7 +92,7 @@
         <h3>Code Samples</h3>
         <ul>
             <li><a href="code.html">"this" exercizes</a></li>
-            <!-- <li><a href="code2.html">Code Sample 2</a></li> -->
+            <li><a href="code2.html">Team Code</a></li>
         </ul>
     </main>
     <footer>
