--- a/week3/code2.html
+++ b/week3/code2.html
@@ -1,24 +1,142 @@
 <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Array Cardio 💪</title>
+  </head>
+  <body>
+    <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
+    <script>
+      // Get your shorts on - this is an array workout!
+      // ## Array Cardio Day 1
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 330 Portal</title>
-    <meta name="author" content="Tiffany Quinlan" />
-    <meta name="description" content="assignment portal for WDD 230 Spring 2020" />
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&family=Patrick+Hand&display=swap"
-        rel="stylesheet"> -->
-    <link rel="stylesheet" href="/portfolio/CSS/normalize.css">
-    <link rel="stylesheet" href="/portfolio/CSS/styles.css">
-</head>
-<html>
-    <body>
-    <header>
-        <h1>Code Samples Continued</h1>
-    </header>
+      // Some data we can work with
 
-    <footer>
-        <p> <a href="/portfolio/week1/notes.html">Week 1</a> Created by Tiffany H | Copyright 2020</p>
-    </footer>
-</body>
+      const inventors = [
+        { first: 'Albert', last: 'Einstein', year: 1879, passed: 1955 },
+        { first: 'Isaac', last: 'Newton', year: 1643, passed: 1727 },
+        { first: 'Galileo', last: 'Galilei', year: 1564, passed: 1642 },
+        { first: 'Marie', last: 'Curie', year: 1867, passed: 1934 },
+        { first: 'Johannes', last: 'Kepler', year: 1571, passed: 1630 },
+        { first: 'Nicolaus', last: 'Copernicus', year: 1473, passed: 1543 },
+        { first: 'Max', last: 'Planck', year: 1858, passed: 1947 },
+        { first: 'Katherine', last: 'Blodgett', year: 1898, passed: 1979 },
+        { first: 'Ada', last: 'Lovelace', year: 1815, passed: 1852 },
+        { first: 'Sarah E.', last: 'Goode', year: 1855, passed: 1905 },
+        { first: 'Lise', last: 'Meitner', year: 1878, passed: 1968 },
+        { first: 'Hanna', last: 'Hammarström', year: 1829, passed: 1909 }
+      ];
+
+      const people = [
+        'Beck, Glenn',
+        'Becker, Carl',
+        'Beckett, Samuel',
+        'Beddoes, Mick',
+        'Beecher, Henry',
+        'Beethoven, Ludwig',
+        'Begin, Menachem',
+        'Belloc, Hilaire',
+        'Bellow, Saul',
+        'Benchley, Robert',
+        'Benenson, Peter',
+        'Ben-Gurion, David',
+        'Benjamin, Walter',
+        'Benn, Tony',
+        'Bennington, Chester',
+        'Benson, Leana',
+        'Bent, Silas',
+        'Bentsen, Lloyd',
+        'Berger, Ric',
+        'Bergman, Ingmar',
+        'Berio, Luciano',
+        'Berle, Milton',
+        'Berlin, Irving',
+        'Berne, Eric',
+        'Bernhard, Sandra',
+        'Berra, Yogi',
+        'Berry, Halle',
+        'Berry, Wendell',
+        'Bethea, Erin',
+        'Bevan, Aneurin',
+        'Bevel, Ken',
+        'Biden, Joseph',
+        'Bierce, Ambrose',
+        'Biko, Steve',
+        'Billings, Josh',
+        'Biondo, Frank',
+        'Birrell, Augustine',
+        'Black, Elk',
+        'Blair, Robert',
+        'Blair, Tony',
+        'Blake, William'
+      ];
+
+      // Array.prototype.filter()
+      // 1. Filter the list of inventors for those who were born in the 1500's
+      const fifteen = inventors.filter(inventor =>(inventor.year >= 1500 && inventor.year < 1600));
+      console.log(fifteen);
+
+      // Array.prototype.map()
+      // 2. Give us an array of the inventors' first and last names
+      const namesFull = inventors.map(inventor => `${inventor.first} ${inventor.last}`);
+      console.log(namesFull);
+
+      // Array.prototype.sort()
+      // 3. Sort the inventors by birthdate, oldest to youngest
+      const sorted = inventors.sort(numerical);
+      function numerical (a,b){
+          if (a < b){return -1;}
+          else if (a > b){return 1;}
+          else {return 0;}
+      }
+      console.log(sorted);
+
+      // Array.prototype.reduce()
+      // 4. How many years did all the inventors live?
+      const totalYears = inventors.reduce((total, inventor) => {return total + (inventor.passed - inventor.year);}, 0);
+      console.log(totalYears);
+
+      // 5. Sort the inventors by years lived
+      const yearSort = years.sort(numerical);
+      console.log(yearSort);
+      // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
+      // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+      // goto the link above and open the console. Paste the following two lines in.  That will create a list of links in memory that you can reference through the console. Use that list to finish the problem.
+      // const category = document.querySelector('.mw-category');
+      // const links = Array.from(category.querySelectorAll('a'));
+      for(const names of links){
+          let n = names.innerHTML.search("de");
+          if(n > -1){
+    console.log(names.innerHTML)}}
+
+      // 7. sort Exercise
+      // Sort the people alphabetically by last name
+        const nameSort = people.sort(alphabetically);
+        function alphabetically (a,b){
+          if (a < b){return -1;}
+          else if (a > b){return 1;}
+          else {return 0;}
+      }
+      // 8. Reduce Exercise
+      // Sum up the instances of each of these
+      const data = [
+        'car',
+        'car',
+        'truck',
+        'truck',
+        'bike',
+        'walk',
+        'car',
+        'van',
+        'bike',
+        'walk',
+        'car',
+        'van',
+        'car',
+        'truck'
+      ];
+    //   let count = [;
+    </script>
+  </body>
 </html>
+
