--- a/week3/notes.html
+++ b/week3/notes.html
@@ -91,7 +91,7 @@
         </div>
         <h3>Code Samples</h3>
         <ul>
-            <li><a href="code.html">"this" exercizes</a></li>
+            <li><a href="code.html">Code from Readings</a></li>
             <li><a href="code2.html">Team Code</a></li>
         </ul>
     </main>
