--- a/week4/code2.html
+++ b/week4/code2.html
@@ -14,7 +14,7 @@
 <html>
     <body>
     <header>
-        <h1>Code Samples Continued</h1>
+        <h1>Code from team project</h1>
     </header>
 
     <footer>
