notes and team project

--- a/week4/notes.html
+++ b/week4/notes.html
@@ -88,7 +88,9 @@
         <h3>Code Samples</h3>
         <ul>
             <li><a href="code.html">Code from Readings</a></li>
-            <li><a href="code2.html">Team Code</a></li>
+            <li><a href="code2.html">Practice Code</a></li>
+            <li><a href="group2/week4.html">Team Project Code</a></li>
+            
         </ul>
     </main>
     <footer>
