code sample and notes

--- a/week4/code.html
+++ b/week4/code.html
@@ -18,9 +18,14 @@
         <h1>Code Samples</h1>
     </header>
     <main>
-        This is where I will display some of the code samples from reading assignments.
+       Form Example
     </main>
     <h3>Form Example (from w3 Schools)</h3>
+    <p>
+        <br> form name="myForm" action="/action_page.php" onsubmit="return validateForm()" method="post"
+        <br> Name:  input type="text" name="fname"
+        <br> input type="submit" value="Submit"
+    </p>
     <form name="myForm" action="/action_page.php" onsubmit="return validateForm()" method="post">
     Name: <input type="text" name="fname">
     <input type="submit" value="Submit">
