--- a/week4/notes.html
+++ b/week4/notes.html
@@ -24,56 +24,57 @@
         <div>
             <h4>Chapter 8</h4>
             <p> Forms
-            <ul>
-                <li>Form controls  </li>
-                <li>Accessing form elements</li>
-                <br>
-                <br>
-                <li>Form properties and methods</li>
-                <li>Form events </li>
-                <li>Submitting a form </li>
-                <li>Retrieving and changing values from a form </li>
-                <li>Form validation</li>
-            </ul>
+                <ul>
+                    <li>Form controls </li>
+                    <li>Accessing form elements</li>
+                    <br>
+                    <br>
+                    <li>Form properties and methods</li>
+                    <li>Form events </li>
+                    <li>Submitting a form </li>
+                    <li>Retrieving and changing values from a form </li>
+                    <li>Form validation</li>
+                </ul>
             </p>
         </div>
         <div>
             <h4>Chapter 12</h4>
             <p> Object-Oriented Programming
-            <ul>
-                <li>An introduction to OOP</li>
-                <li>Constructor functions</li>
-                <br>uses a function that defines the properties and methods of an object.
-                <li>Using classes in JavaScript</li>
-                <li>Prototypes</li>  
-                <li>Public and private methods</li>
-                <br>similar to public and private variables.
-                <li>Inheritance</li>
-                <br>example: ford, hunda, and kia can inherit from the car method
-                <li>Creating objects from objects</li> 
-                <br>you can use multiple opbjects to make up other objects, person makes up student and teacher and both make up a class.
-                <li>Adding methods to built-in objects</li>
-                <li>Mixins</li>
-                <li>Chaining functions</li> 
-                <li>This and that</li>    
-                <li>Borrowing methods from prototypes</li>
-            </ul>
+                <ul>
+                    <li>An introduction to OOP</li>
+                    <li>Constructor functions</li>
+                    <br>uses a function that defines the properties and methods of an object.
+                    <li>Using classes in JavaScript</li>
+                    <li>Prototypes</li>
+                    <li>Public and private methods</li>
+                    <br>similar to public and private variables.
+                    <li>Inheritance</li>
+                    <br>example: ford, hunda, and kia can inherit from the car method
+                    <li>Creating objects from objects</li>
+                    <br>you can use multiple opbjects to make up other objects, person makes up student and teacher and
+                    both make up a class.
+                    <li>Adding methods to built-in objects</li>
+                    <li>Mixins</li>
+                    <li>Chaining functions</li>
+                    <li>This and that</li>
+                    <li>Borrowing methods from prototypes</li>
+                </ul>
             </p>
         </div>
         <div>
             <h4>Chapter 15</h4>
             <p> Modern JavaScript
-            <ul>
-                <li>Modular JavaScript</li>
-            </ul>
+                <ul>
+                    <li>Modular JavaScript</li>
+                </ul>
             </p>
         </div>
         <h3>Code Samples</h3>
         <ul>
             <li><a href="code.html">Code from Readings</a></li>
             <li><a href="code2.html">Practice Code</a></li>
-            <li><a href="group2/week4.html">Team Project Code</a></li>
-            
+            <li><a href="/portfolio/group2/week4.html">Team Project Code</a></li>
+
         </ul>
     </main>
     <footer>
