folder structure team file

--- a/week4/notes.html
+++ b/week4/notes.html
@@ -73,7 +73,7 @@
         <ul>
             <li><a href="code.html">Code from Readings</a></li>
             <li><a href="code2.html">Practice Code</a></li>
-            <li><a href="/portfolio/group2/week4.html">Team Project Code</a></li>
+            <li><a href="/portfolio/team/week4.html">Team Project Code</a></li>
 
         </ul>
     </main>
