--- a/week4/notes.html
+++ b/week4/notes.html
@@ -27,13 +27,27 @@
                 <ul>
                     <li>Form controls </li>
                     <li>Accessing form elements</li>
-                    <br>
-                    <br>
+                    <br>const form = document.forms[0];
                     <li>Form properties and methods</li>
+                    <br> button  type='submit'>Submit
+                    <br> input type='submit' value='Submit'
+                    <br> input type='image' src='button.png'
                     <li>Form events </li>
+                    <br> input.addEventListener
                     <li>Submitting a form </li>
+                    <br>you can add js to alert the user that the form has been submitted [example in code]
                     <li>Retrieving and changing values from a form </li>
+                    <br>This section explains how to use search and replace items in a form.
+                    <br>focus and blur event handlers
+                    <li>common Form fields</li>
+                    <br>[input] fields, including text, passwords, check boxes, radio buttons, and file uploads
+                    <br>[select] menus for drop-down lists of options
+                    <br>[textarea] elements for longer text entry
+                    <br>[button] elements for submitting and resetting forms
                     <li>Form validation</li>
+                    <br>Form validation can occur on the client side (using JavaScript), and on the server side. 
+                    <br>use both client-side and server-side validation.
+                    <br>Don't rely only on js to validate as the js can be manipulated and bypassed!
                 </ul>
             </p>
         </div>
@@ -66,6 +80,10 @@
             <p> Modern JavaScript
                 <ul>
                     <li>Modular JavaScript</li>
+                    <br>modules are blocks of code that can be used again.
+                    <br>They have their own global scope 
+                    <br>explort and import
+                
                 </ul>
             </p>
         </div>
@@ -73,7 +91,7 @@
         <ul>
             <li><a href="code.html">Code from Readings</a></li>
             <li><a href="code2.html">Practice Code</a></li>
-            <li><a href="/portfolio/team/week4.html">Team Project Code</a></li>
+            <li><a href="/portfolio/team/week4">Team Project Code</a></li>
 
         </ul>
     </main>
